@@ -1711,3 +1711,6 @@ Fixed: OF_PetSlots optional flag on sphere.ini not decreasing follower slots whe
 Fixed: Human NPCs calling too many guards when they see an criminal/murderer.
 Fixed: Guard NPCs walking too far away from the location where they got called.
 Changed: Char trigger @PetDesert now will be called when the pet get released in any situation instead only when it got starving or attacked by its master.
+
+08-01-2020, Coruja
+Fixed: Item pickup setting TARGP/TARGPRV char properties even when pickup fail.
